--- a/style.css
+++ b/style.css
@@ -309,7 +309,7 @@ a:focus {
 
 #masthead{
   position: relative;
-  z-index: 200; /* trump slidebox */
+  z-index: 70; /* trump slidebox */
 }
 #site-logo {
   float: left;
@@ -365,7 +365,7 @@ h1#site-title a:link, h1#site-title a:visited{
   
 #main-menu li {
   float: left;
-  z-index: 101;
+  z-index: 70;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -413,7 +413,7 @@ h1#site-title a:link, h1#site-title a:visited{
 */
 #main-menu li ul {
   font-size: 12px;
-  z-index: 9999;
+  z-index: 70;
   top: 50px;
   position: absolute;
   left: -999em;
@@ -477,7 +477,7 @@ h1#site-title a:link, h1#site-title a:visited{
   height: 100%;
   left: 0px;
   top:0px;
-  z-index: 100;
+  z-index: 30;
 }
 
 img.grayscale {
@@ -493,7 +493,7 @@ img.grayscale {
   left: 50%;
   margin-left: -400px;
   text-align: center;
-  z-index: 120;
+  z-index: 35;
   color: #fff;
 } 
   
